--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Octopus</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Lorem Ipsum.</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Swim with us</a>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">An octopus has three hearts, nine brains</h2>
+        <a href="#about" class="btn btn-primary js-scroll-trigger">Dive here for more octopus facts</a>
       </div>
     </div>
   </header>
