--- a/index.html
+++ b/index.html
@@ -123,8 +123,25 @@
         </div>
       </div>
     </div>
+    <!-- Project Two Row -->
+    <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+        <img class="img-fluid" src="img/octu-shape.jpg" alt="">
+        </div>
+        <div class="col-lg-6">
+        <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+            <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Size</h4>
+                <p class="mb-0 text-white-50">The giant Pacific octopus (Enteroctopus dofleini) is often cited as the largest known octopus species. Adults usually weigh around 15 kg (33 lb), with an arm span of up to 4.3 m (14 ft). The largest specimen of this species to be scientifically documented was an animal with a live mass of 71 kg (156.5 lb). Much larger sizes have been claimed for the giant Pacific octopus: one specimen was recorded as 272 kg (600 lb) with an arm span of 9 m (30 ft). A carcass of the seven-arm octopus, Haliphron atlanticus, weighed 61 kg (134 lb) and was estimated to have had a live mass of 75 kg (165 lb). The smallest species is Octopus wolfi, which is around 2.5 cm (1 in) and weighs less than 1 g (0.035 oz).</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
   </section>
-
+ 
   <!-- Signup Section -->
   <section id="signup" class="signup-section">
     <div class="container">
