--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Size</h2>
-          <p class="text-white-50">The giant Pacific octopus (Enteroctopus dofleini) is often cited as the largest known octopus species. Adults usually weigh around 15 kg (33 lb), with an arm span of up to 4.3 m (14 ft). The largest specimen of this species to be scientifically documented was an animal with a live mass of 71 kg (156.5 lb). Much larger sizes have been claimed for the giant Pacific octopus: one specimen was recorded as 272 kg (600 lb) with an arm span of 9 m (30 ft). A carcass of the seven-arm octopus, Haliphron atlanticus, weighed 61 kg (134 lb) and was estimated to have had a live mass of 75 kg (165 lb). The smallest species is Octopus wolfi, which is around 2.5 cm (1 in) and weighs less than 1 g (0.035 oz).
+          <h2 class="text-white mb-4">About</h2>
+          <p class="text-white-50">Octopus team have 4 octopus enthusiastics Markus (Product Owner) Lassi (Scrum Master) Elina and Mohammed. We are specialised on great octopus websites.
         </div>
       </div>
-      <img src="img/octu-shape.jpg" class="img-fluid" alt="">
+      <img src="img/sprint_photo.jpg" class="img-fluid" alt="">
     </div>
   </section>
 
