--- a/index.html
+++ b/index.html
@@ -85,7 +85,17 @@
           <div class="featured-text text-center text-lg-left">
             <h4>General information on octopus</h4>
             <p class="text-black-50 mb-0">The octopus is a soft-bodied, eight-limbed mollusc of the order Octopoda. There are around 300 Octopus species recognised. The octopus is bilaterally symmetric with two eyes and a beak, with its mouth at the center point of the eight limbs (traditionally called "arms", sometimes mistakenly called "tentacles"). The soft body can rapidly alter its shape, enabling octopuses to squeeze through small gaps. They trail their eight appendages behind them as they swim. The siphon is used both for respiration and for locomotion, by expelling a jet of water. Octopuses have a complex nervous system and excellent sight, and are among the most intelligent and behaviourally diverse of all invertebrates.</p>
-          </div>
+            <p class="text-black-50 mb-50">
+                    Scientific classification: </br>
+                    Kingdom:    Animalia </br>
+                    Phylum:    Mollusca</br>
+                    Class:    Cephalopoda</br>
+                    Order:    Octopoda</br>
+                    Family:    Octopodidae</br>
+                    Subfamily:    Octopodinae</br>
+                    Genus:    Octopus</br>
+            </p>
+        </div>
         </div>
       </div>
       <!-- Project One Row -->
@@ -124,7 +134,7 @@
       </div>
     </div>
     <!-- Project Two Row -->
-    <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+    <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
         <img class="img-fluid" src="img/octu-shape.jpg" alt="">
         </div>
