--- a/index.html
+++ b/index.html
@@ -150,6 +150,33 @@
         </div>
         </div>
     </div>
+
+   <div class="row justify-content-center no-gutters">
+        <!--<div class="col-lg-6">-->
+        <!--<img class="img-fluid" src="img/octu-shape.jpg" alt="">-->
+        <!--</div>-->
+        <div class="col-lg-6">
+        <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+            <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Octopus species</h4>
+                <p class="mb-0 text-white-50">There are around 300 Octopus species recognised. Here is a short introduction to some of the species.
+The Atlantic Pygmy Octopus is very small, only about 5 ½ inches in length overall. Over 3 inches of that is the arms so the mantle part of the body isn’t very much to work with at all.
+The Blue-Ringed Octopus is one that has a trademark feature about it. They have rings of blue that are around their bodies.
+The California Two-Spot Octopus offers a very distinct appearance. It is also known by the name Bimac Octopus.
+The Caribbean Reef Octopus is one that has a fascinating look to it. The combination of blue and green color is something that gets people’s attention
+There can be quite a difference in the sizes of the Common Octopus. Some of them are only about 12 inches long while others are three times that at 36 inches in length.
+There is a good chance you have heard of the East Pacific Red Octopus. They are small in size and have a body that is about three times smaller than the length of their eight arms.
+They aren’t very large Octopus with an overall length of two feet when they are fully grown. They have a normal coloring that spans many spans of brown and white.
+The winner of being the largest of all Octopus species in the world is the North Pacific Giant. This one can be close to 150 pound when it is fully mature and be as long as 15 feet.
+What makes the Seven-Arm Octopus stand out from the other 300 species is that it has one less arm than they all do. Well, that is how it appears anyway.
+                </p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
   </section>
  
   <!-- Signup Section -->
